# language-translator

./: .gitignore  README.md  pyproject.toml
src/language_translator/: async_main.py  main.py
